# tech-post-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
docs/: first_dev.md
scripts/: main.py
scripts/github/: index.py  ingestor.py  local_fs.py  main.py  simple_agent.py
src/tech_post_agent/: model.py  prompts.py  schema.py
src/tech_post_agent/front/: main.py
src/tech_post_agent/graphs/: __init__.py  main.py  react.py  super.py
src/tech_post_agent/mcp/: __init__.py  command.py
src/tech_post_agent/tools/: __init__.py  base.py  github.py  index.py  prompts.py  utils.py
src/tech_post_agent/tools/core/: __init__.py  index.py  ingestor.py  utils.py
src/tech_post_agent/tools/ingestor/: __init__.py
